--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "italy = top_travel_cities[:]"
+    "italy = top_travel_cities[-3]"
    ]
   },
   {
