--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors = top_travel_cities"
+    "kindof_neighbors = top_travel_cities[1:4]"
    ]
   },
   {
