--- a/index.ipynb
+++ b/index.ipynb
@@ -415,11 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set())"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
